22 May 2004 mipsator
 * hunted some more XXX ...

16 May 2004 mipsator
 * fixed some XXX remaining in parse.c and pmkinstall.c.

11 May 2004 mipsator
 * fixed samples to run properly.
 * added missing error messages.
 * added misc defines for LIBS and CFLAGS.

# snapshot 0.8.1-s1

02 May 2004 mipsator
 * fixed a bug recently introduced in CHECK_PKG_CONFIG.

24 Apr 2004 mipsator
 * more stuff related to the pmksetup engine changes.

15 Apr 2004 mipsator
 * added new engine for pmksetup. Some minor changes are still remaining
   but pmksetup is working fine.

01 Apr 2004 mipsator
 * imported skeleton of pmkshgen.
 * fixed use of parse_clopt's value in pmk and pmksetup.
 * booleanification of pmksetup.
 * added handling functions for prsopt structures.

# PMK 0.8.1 release

14 Mar 2004 mipsator
 * modified a bit the version string format.

29 Feb 2004 mipsator
 * added failsafe checks in dynarray functions, based on a patch from
   Marek Habersack.
 * fixed pkgcell_destroy() to call free() only when needed, based on a
   patch from Marek Habersack.
 * added MODULE option to CHECK_CONFIG command.

25 Feb 2004 mipsator
 * moved tests for pmkscan and pmkinstall.
 * fixed pmkc against segfault when .pc doesn't exists or empty
   requires field, based on a patch from Marek Habersack.

21 Feb 2004 mipsator
 * fixed pmkscan bug that happens when no sources files exist, noticed
   by Marek Habersack.
 * updated pmkscan.dat to check for strndup(), strndupa() an vsyslog(),
   from Marek Habersack.

16 Feb 2004 mreindl
 * update pkgsrc and OpenBSD ports to 0.8

# PMK 0.8 release

14 Feb 2004 mipsator
 * added missing tutorial stuff for release.

13 Feb 2004 mipsator
 * updated the tutorial to speak about command label (noticed by
   Kurt V. Hindenburg).

# snapshot 0.7.13

12 Feb 2004 mipsator
 * added parse_clopt() to handle line command options.
 * added support for addition and removal of variable in pmksetup.
 * fixed command line option support in pmk.